// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The LoginMessage component, with a button, matches the snapshot 1`] = `
.c0 {
  padding: 0px;
  width: 480px;
  height: 480px;
  text-align: center;
}

.c2 {
  margin-top: 20px;
  width: 200px;
}

.c1 {
  margin-top: 40px;
  width: 360px;
}

.c3 {
  padding: 0 2em;
}

<div
  className="c0"
>
  <img
    className="c1"
    src="my-yoast-academy-logo.svg"
  />
  <img
    className="c2"
    src="greeting.png"
  />
  <h2>
    <span>
      Password changed successfully!
    </span>
  </h2>
  <p
    className="c3"
  >
    <span>
      Continue to MyYoast
    </span>
  </p>
</div>
`;

exports[`The LoginMessage component, with a paragraph, matches the snapshot 1`] = `
.c0 {
  padding: 0px;
  width: 480px;
  height: 480px;
  text-align: center;
}

.c2 {
  margin-top: 20px;
  width: 200px;
}

.c1 {
  margin-top: 40px;
  width: 360px;
}

.c3 {
  padding: 0 2em;
}

<div
  className="c0"
>
  <img
    className="c1"
    src="my-yoast-academy-logo.svg"
  />
  <img
    className="c2"
    src="greeting.png"
  />
  <h2>
    <span>
      Welcome back!
    </span>
  </h2>
  <p
    className="c3"
  >
    <span>
      Log in with your email address and password. If you don't remember your password, just reset it!
    </span>
  </p>
</div>
`;
